test/tests/errors/error-array-cannot-override.sm
// true
// false
/**/
/**/

program {
    array x[1:1];
    x = 1;
}